Avoid line breaks in timestamps.

--- a/sass/_chat.sass
+++ b/sass/_chat.sass
@@ -20,6 +20,7 @@
 	.chatTimestamp
 		font-size: 0.8em
 		color: #887
+		white-space: nowrap
 	.chatAuthor
 		color: #17afb8
 		min-width: 8em
